# TestCplexMultiCommodityFlow

./: CMakeLists.txt  main.cpp
Model/: McfInstance.cpp  McfInstance.h  McfInstanceSolver.cpp  McfInstanceSolver.h  McfNetworkLink.h  McfVariableSet.cpp  McfVariableSet.h
Tests/: mcf.lp  mcf.sol  test.in
